class loading testing